--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, intial-scale=1.0" />
+    <link rel="stylesheet" href="styles/styles.css" />
     <title>HTML Academy: Седона</title>
   </head>
   <body>
@@ -28,9 +29,9 @@
           </li>
         </ul>
       </nav>
-      <button class="search" type="button">
-        <span class="visually-hidden">Поиск по сайту</span>
-      </button>
+      <a class="search" href="#">
+        <span class="visually-hidden">Перейти в поиск</span>
+      </a>
       <a class="likes" href="#">
         <span class="visually-hidden">Перейти в избранное</span>
       </a>
@@ -40,13 +41,6 @@
     <main class="main-index">
       <section class="hero">
         <h1 class="visually-hidden">город Седона</h1>
-        <img
-          src="images/hero-picture.jpg"
-          alt="горы в Седоне"
-          class="hero-pic-mountains"
-          width="1200"
-          height="485"
-        />
         <img
           src="images/svg-icons/hero-text.svg"
           alt="Welcome to the gorgeous Sedona. Because the Grand Canyon sucks"
@@ -65,10 +59,12 @@
         </p>
         <ul class="advantages-list">
           <li class="advantages-item">
-            <h3 class="advantages-subtitle">Настоящий городок</h3>
-            <p class="advantages-text">
-              Седона — не аттракцион для туристов, там течёт своя жизнь
-            </p>
+            <div class="advantages-wrapper">
+              <h3 class="advantages-subtitle">Настоящий городок</h3>
+              <p class="advantages-text">
+                Седона — не аттракцион для туристов, там течёт своя жизнь
+              </p>
+            </div>
             <img
               src="images/advantages-picture-city.jpg"
               alt="вид на Седону"
@@ -96,10 +92,12 @@
             </p>
           </li>
           <li class="advantages-item">
-            <h3 class="advantages-subtitle">Там есть мост дьявола</h3>
-            <p class="advantages-text">
-              Да, по нему можно пройти! Если вы осмелитесь, разумеется
-            </p>
+            <div class="advantages-wrapper">
+              <h3 class="advantages-subtitle">Там есть мост дьявола</h3>
+              <p class="advantages-text">
+                Да, по нему можно пройти! Если вы осмелитесь, разумеется
+              </p>
+            </div>
             <img
               src="images/advantages-picture-mountains.jpg"
               alt="вид на мост"
@@ -120,20 +118,20 @@
         </p>
         <ul class="services-list">
           <li class="services-item">
-            <h3 class="service-type">Жильё</h3>
-            <p class="service-description">
+            <h3 class="services-type">Жильё</h3>
+            <p class="services-description">
               Рекомендуем пожить в настоящем мотеле, всё как в кино!
             </p>
           </li>
           <li class="services-item">
-            <h3 class="service-type">Еда</h3>
-            <p class="service-description">
+            <h3 class="services-type">Еда</h3>
+            <p class="services-description">
               Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!
             </p>
           </li>
           <li class="services-item">
-            <h3 class="service-type">Сувениры</h3>
-            <p class="service-description">
+            <h3 class="services-type">Сувениры</h3>
+            <p class="services-description">
               Не только китайского, но и настоящего местного производства!
             </p>
           </li>
@@ -141,8 +139,8 @@
       </section>
       <section class="hotel-search">
         <h2 class="visually-hidden">Поиск гостинницы</h2>
-        <p class="hotel-search-text">Заинтересовались?</p>
-        <p class="hotel-search-text">
+        <p class="hotel-search-title">Заинтересовались?</p>
+        <p class="hotel-search-description">
           Укажите предполагаемые даты поездки,и мы покажем вам лучшие
           предложения гостиниц в Седоне
         </p>
@@ -161,11 +159,14 @@
           class="subscribe-form"
         >
           <input
+            name="client-email"
             type="email"
             class="subscribe-email"
             placeholder="Ваш e-mail"
           />
-          <button class="subscribe-button" type="button">Подписаться</button>
+          <button class="button subscribe-button" type="button">
+            Подписаться
+          </button>
         </form>
       </section>
     </main>
