--- a/catalog.html
+++ b/catalog.html
@@ -29,13 +29,15 @@
           </li>
         </ul>
       </nav>
-      <a class="search" href="#">
-        <span class="visually-hidden">Перейти в поиск</span>
-      </a>
-      <a class="likes" href="#">
-        <span class="visually-hidden">Перейти в избранное</span>
-      </a>
-      <a href="#" class="button">Хочу сюда!</a>
+      <div class="user-menu">
+        <a class="search" href="#">
+          <span class="visually-hidden">Перейти в поиск</span>
+        </a>
+        <a class="likes" href="#">
+          <span class="visually-hidden">Перейти в избранное</span>
+        </a>
+        <a href="#" class="button page-header-button">Хочу сюда!</a>
+      </div>
     </header>
 
     <main class="main-inner">
@@ -60,130 +62,144 @@
             method="post"
             class="hotels-filter-form"
           >
-            <fieldset class="hotels-filter-group">
-              <legend>
-                <h3 class="hotels-filter-title">Инфраструктура:</h3>
-              </legend>
-              <label class="control"
-                ><input
-                  name="waterpool"
-                  type="checkbox"
-                  class="control-input"
-                  checked
-                />Бассейн</label
-              ><label class="control"
-                ><input
-                  name="parking"
-                  type="checkbox"
-                  class="control-input"
-                  checked
-                />Парковка</label
-              ><label class="control"
-                ><input
-                  name="wi-fi"
-                  type="checkbox"
-                  class="control-input"
-                />Wi-Fi</label
-              >
-            </fieldset>
+            <div class="hotels-filter-wrapper">
+              <fieldset class="hotels-filter-group">
+                <legend class="hotels-filter-title">
+                  <h3>Инфраструктура:</h3>
+                </legend>
+                <label class="control"
+                  ><input
+                    name="waterpool"
+                    type="checkbox"
+                    class="control-input"
+                    checked
+                  />Бассейн</label
+                ><label class="control"
+                  ><input
+                    name="parking"
+                    type="checkbox"
+                    class="control-input"
+                    checked
+                  />Парковка</label
+                ><label class="control"
+                  ><input
+                    name="wi-fi"
+                    type="checkbox"
+                    class="control-input"
+                  />Wi-Fi</label
+                >
+              </fieldset>
 
-            <fieldset class="hotels-filter-group">
-              <legend><h3 class="hotels-filter-title">Тип жилья:</h3></legend>
-              <label class="control"
-                ><input
-                  name="hotel-type"
-                  type="radio"
-                  class="control-input"
-                  value="hotel"
-                  checked
-                />Гостиница</label
-              ><label class="control"
-                ><input
-                  name="hotel-type"
-                  type="radio"
-                  class="control-input"
-                  value="motel"
-                />Мотель</label
-              ><label class="control"
-                ><input
-                  name="hotel-type"
-                  type="radio"
-                  class="control-input"
-                  value="apartments"
-                />Апартаменты</label
-              >
-            </fieldset>
+              <fieldset class="hotels-filter-group">
+                <legend class="hotels-filter-title"><h3>Тип жилья:</h3></legend>
+                <label class="control"
+                  ><input
+                    name="hotel-type"
+                    type="radio"
+                    class="control-input"
+                    value="hotel"
+                    checked
+                  />Гостиница</label
+                ><label class="control"
+                  ><input
+                    name="hotel-type"
+                    type="radio"
+                    class="control-input"
+                    value="motel"
+                  />Мотель</label
+                ><label class="control"
+                  ><input
+                    name="hotel-type"
+                    type="radio"
+                    class="control-input"
+                    value="apartments"
+                  />Апартаменты</label
+                >
+              </fieldset>
+            </div>
 
-            <fieldset class="hotels-filter-group">
-              <legend>
-                <h3 class="hotels-filter-title">Стоимость, ₽:</h3>
-              </legend>
-              <label class="control"
-                ><input
-                  name="min-price"
-                  type="number"
-                  class="control-input"
-                  value="0" /></label
-              ><span class="control-input-text">от</span
-              ><label class="control"
-                ><input
-                  name="max-price"
-                  type="number"
-                  class="control-input"
-                  value="9000"
-                /><span class="control-input-text">до</span></label
-              >
-              <input
-                name="range-price"
-                type="range"
-                min="0"
-                max="9000"
-                class="control-range"
-              />
-            </fieldset>
-            <ul class="filter-button-list">
-              <li class="filter-button-item">
-                <button class="button filter-button" type="button">
-                  Применить
-                </button>
-              </li>
-              <li class="filter-button-item">
-                <button class="button filter-button-reset" type="button">
-                  Сбросить
-                </button>
-              </li>
-            </ul>
+            <div class="hotels-filter-wrapper">
+              <fieldset class="hotels-filter-group hotels-filter-group-range">
+                <legend class="hotels-filter-title">
+                  <h3>Стоимость, ₽:</h3>
+                </legend>
+
+                <div class="range-input-wrapper">
+                  <label class="control">
+                    <input
+                      name="min-price"
+                      type="number"
+                      class="control-input"
+                      value="0"
+                    /><span class="control-input-text">от</span></label
+                  >
+                  <label class="control"
+                    ><input
+                      name="max-price"
+                      type="number"
+                      class="control-input"
+                      value="9000"
+                    /><span class="control-input-text">до</span></label
+                  >
+                </div>
+
+                <input
+                  name="range-price"
+                  type="range"
+                  min="0"
+                  max="9000"
+                  class="control-range"
+                />
+              </fieldset>
+              <ul class="filter-button-list">
+                <li class="filter-button-item">
+                  <button class="button filter-button" type="button">
+                    Применить
+                  </button>
+                </li>
+                <li class="filter-button-item">
+                  <button class="button filter-button-reset" type="button">
+                    Сбросить
+                  </button>
+                </li>
+              </ul>
+            </div>
           </form>
         </section>
       </div>
 
       <section class="hotels-catalog">
         <h2 class="visually-hidden">Каталог отелей</h2>
-        <p class="hotels-catalog-result">
-          Найдено гостиниц: <span class="hotels-catalog-result-number">38</span>
-        </p>
-        <select class="select-control" aria-label="Сортировка">
-          <option value="cheap">Сначала дешевые</option>
-          <option value="expensive">Сначала дорогие</option>
-          <option value="popular">Сначала популярные</option>
-        </select>
-        <ul class="select-buttons">
-          <li class="select-button">
-            <button type="button">
-              <span class="visually-hidden">Показать карточками</span>
-            </button>
-          </li>
-          <li class="select-button">
-            <button type="button">
-              <span class="visually-hidden">Показать по одиночке</span>
-            </button>
-          </li>
-          <li class="select-button">
-            <button type="button">
-              <span class="visually-hidden">Показать списком</span>
-            </button>
-          </li>
-        </ul>
+
+        <div class="hotel-catalog-wrapper">
+          <p class="hotels-catalog-result">
+            Найдено гостиниц:
+            <span class="hotels-catalog-result-number">38</span>
+          </p>
+          <select class="select-control" aria-label="Сортировка">
+            <option value="cheap">Сначала дешевые</option>
+            <option value="expensive">Сначала дорогие</option>
+            <option value="popular">Сначала популярные</option>
+          </select>
+          <ul class="select-buttons">
+            <li class="select-button">
+              <button type="button">
+                <span class="visually-hidden">Показать карточками</span>
+              </button>
+            </li>
+            <li class="select-button">
+              <button type="button">
+                <span class="visually-hidden">Показать по одиночке</span>
+              </button>
+            </li>
+            <li class="select-button">
+              <button type="button">
+                <span class="visually-hidden">Показать списком</span>
+              </button>
+            </li>
+          </ul>
+        </div>
+
         <ul class="hotels-list">
           <li class="hotel-item">
             <img
@@ -194,16 +210,23 @@
               height="212"
             />
             <h3 class="hotel-name">Amara Resort & Spa</h3>
-            <span class="hotel-type">Гостиница</span>
-            <span class="hotel-price">От 4000 ₽</span>
-            <a class="button hotel-link" href="#">подробнее</a
-            ><button class="button favourite-button" type="button">
-              в избранное
-            </button>
-            <p class="star 4-star">
-              <span class="visually-hidden">4 звезды.</span>
-            </p>
-            <span class="hotel-rating">Рейтинг: 8,5</span>
+            <div class="hotel-item-wrapper">
+              <span class="hotel-type">Гостиница</span>
+              <span class="hotel-price">От 4000 ₽</span>
+            </div>
+
+            <div class="hotel-item-wrapper">
+              <a class="button hotel-link" href="#">подробнее</a
+              ><button class="button favourite-button" type="button">
+                в избранное
+              </button>
+            </div>
+            <div class="hotel-item-wrapper">
+              <p class="star 4-star">
+                <span class="visually-hidden">4 звезды.</span>
+              </p>
+              <span class="hotel-rating">Рейтинг: 8,5</span>
+            </div>
           </li>
           <li class="hotel-item">
             <img
@@ -214,19 +237,25 @@
               height="212"
             />
             <h3 class="hotel-name">Villas at Poco Diablo</h3>
-            <span class="hotel-type">Гостиница</span>
-            <span class="hotel-price">От 5000 ₽</span>
-            <a class="button hotel-link" href="#">подробнее</a
-            ><button
-              class="button favourite-button favourite-button-chosen"
-              type="button"
-            >
-              В избранном
-            </button>
-            <p class="star 4-star">
-              <span class="visually-hidden">4 звезды.</span>
-            </p>
-            <span class="hotel-rating">Рейтинг: 9,2</span>
+            <div class="hotel-item-wrapper">
+              <span class="hotel-type">Гостиница</span>
+              <span class="hotel-price">От 5000 ₽</span>
+            </div>
+            <div class="hotel-item-wrapper">
+              <a class="button hotel-link" href="#">подробнее</a
+              ><button
+                class="button favourite-button favourite-button-chosen"
+                type="button"
+              >
+                В избранном
+              </button>
+            </div>
+            <div class="hotel-item-wrapper">
+              <p class="star 4-star">
+                <span class="visually-hidden">4 звезды.</span>
+              </p>
+              <span class="hotel-rating">Рейтинг: 9,2</span>
+            </div>
           </li>
           <li class="hotel-item">
             <img
@@ -237,16 +266,24 @@
               height="212"
             />
             <h3 class="hotel-name">Desert Quail Inn</h3>
-            <span class="hotel-type">Гостиница</span>
-            <span class="hotel-price">От 2500 ₽</span>
-            <a class="button hotel-link" href="#">подробнее</a
-            ><button class="button favourite-button" type="button">
-              в избранное
-            </button>
-            <p class="star 3-star">
-              <span class="visually-hidden">3 звезды.</span>
-            </p>
-            <span class="hotel-rating">Рейтинг: 6,9</span>
+            <div class="hotel-item-wrapper">
+              <span class="hotel-type">Гостиница</span>
+              <span class="hotel-price">От 2500 ₽</span>
+            </div>
+
+            <div class="hotel-item-wrapper">
+              <a class="button hotel-link" href="#">подробнее</a
+              ><button class="button favourite-button" type="button">
+                в избранное
+              </button>
+            </div>
+
+            <div class="hotel-item-wrapper">
+              <p class="star 3-star">
+                <span class="visually-hidden">3 звезды.</span>
+              </p>
+              <span class="hotel-rating">Рейтинг: 6,9</span>
+            </div>
           </li>
           <li class="hotel-item">
             <img
@@ -257,16 +294,24 @@
               height="212"
             />
             <h3 class="hotel-name">GreenTree Inn</h3>
-            <span class="hotel-type">Гостиница</span>
-            <span class="hotel-price">От 1500 ₽</span>
-            <a class="button hotel-link" href="#">подробнее</a
-            ><button class="button favourite-button" type="button">
-              в избранное
-            </button>
-            <p class="star 2-star">
-              <span class="visually-hidden">2 звезды.</span>
-            </p>
-            <span class="hotel-rating">Рейтинг: 5,0</span>
+            <div class="hotel-item-wrapper">
+              <span class="hotel-type">Гостиница</span>
+              <span class="hotel-price">От 1500 ₽</span>
+            </div>
+
+            <div class="hotel-item-wrapper">
+              <a class="button hotel-link" href="#">подробнее</a
+              ><button class="button favourite-button" type="button">
+                в избранное
+              </button>
+            </div>
+
+            <div class="hotel-item-wrapper">
+              <p class="star 2-star">
+                <span class="visually-hidden">2 звезды.</span>
+              </p>
+              <span class="hotel-rating">Рейтинг: 5,0</span>
+            </div>
           </li>
         </ul>
         <ol class="pagination">
@@ -339,14 +384,14 @@
           </li>
         </ul>
         <a href="tel:+78128121212" class="contacts-phone">+7 (812) 812-12-12</a>
+        <a href="https://htmlacademy.ru/" class="html-academy-logo"
+          ><img
+            src="images/svg-icons/html-academy-logo.svg"
+            alt="логотип HTML Академии"
+            width="115"
+            height="33"
+        /></a>
       </section>
-      <a href="https://htmlacademy.ru/" class="html-academy-logo"
-        ><img
-          src="images/svg-icons/html-academy-logo.svg"
-          alt="логотип HTML Академии"
-          width="115"
-          height="33"
-      /></a>
     </footer>
   </body>
 </html>
